forEnersys/DavePkg/objects/Dependent_Picklist_Values__mdt.object
<CustomObject>
    <fields>
        <fullName>Controlling_Field_API_Name__c</fullName>
        <label>Controlling Field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Field_Value__c</fullName>
        <label>Controlling Field Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_API_Name__c</fullName>
        <label>Dependent Field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_Value__c</fullName>
        <label>Dependent Field Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_for_Dependent_Picklist__c</fullName>
        <label>Object Name for Dependent Picklist</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Dependent Picklist Value</label>
    <pluralLabel>Dependent Picklist Values</pluralLabel>
</CustomObject>